[tool.poetry]
name = "isometric-api"
version = "0.0.1"
description = "A async wrapper to the Isometric API (https://jeyy-api.herokuapp.com/)"
authors = ["proguy914629"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/proguy914629bot/isometric-api"
repository = "https://github.com/proguy914629bot/isometric-api"


[tool.poetry.dependencies]
python = ">=3.5"
aiohttp = "^3.7.4"
typing-extensions = "^3.10.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
